# celeb_shortest_distance

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  celeb-search-app.yaml  config.yaml
.github/workflows/: CI.yaml
configuration/: base.yaml  local.yaml  production.yaml
data/new_small/: actors.csv  actors.parquet  connections.csv  connections.parquet  movies.parquet
data_cleaning/: README.md  db_setup.py  pyproject.toml
data_cleaning/data_cleaning/: clean.py
data_cleaning/src/data_cleaning/: __init__.py  clean.py
migrations/: 20240523155350_make_actor_table.sql  20240523161025_import_actors.sql  20240523214128_make_full_text_index.sql
scripts/: init_actor_db.sh  load_test.sh  move_to_pi.sh  populate_db.sh
src/: configuration.rs  data.rs  graph.rs  integration_tests.rs  interactive_io.rs  lib.rs  main.rs
src/webapp/: db_connection.rs  mod.rs  startup.rs  telemetry.rs
src/webapp/routes/: get_actor.rs  homepage.rs  mod.rs  shortest_path.rs
static/: index.html  index.js  prefix.html  search_results_table.html
tests/: integration_tests.rs
