[package]
name = "celeb_shortest_distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
config = "0.14.0"
csv = "1.3.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
strsim = "0.11.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
uuid = { version = "1.8.0", features = ["v4"] }


[[bin]]
name = "celeb_search"
path = "src/bin/main.rs"

[[bin]]
name = "celeb_app"
path = "src/bin/run_app.rs"
