[package]
name = "celeb_shortest_distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
config = "0.15.18"
csv = "1.4.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "sqlite"] }
strsim = "0.11.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
    "registry",
    "env-filter",
] }
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
uuid = { version = "1.18.1", features = ["v4"] }
serde_json = "1.0.145"
actix-files = "0.6.8"
actix-cors = "0.7.1"


[[bin]]
name = "celeb_search"
path = "src/bin/main.rs"

[[bin]]
name = "celeb_app"
path = "src/bin/run_app.rs"
