[tool.poetry]
name = "data-cleaning"
version = "0.1.0"
description = ""
authors = ["Abhishek Roy <abhishek.roy@perspectum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
pandas = "^2.1.2"
ruff = "^0.1.3"
pyarrow = "^14.0.0"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
